--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,14 +1,15 @@
 spring.application.name=empik-coupon
 spring.profiles.active=dev
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
+spring.main.allow-bean-definition-overriding=true
 spring.jpa.properties.hibernate.hbm2ddl.create_namespaces=true
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
